...
                )
            }
        }

        Column(modifier = Modifier.padding(24.dp)) {
            Text(
                text = "Apariencia", 
                fontSize = 14.sp, 
                fontWeight = FontWeight.Bold, 
                color = MaterialTheme.colorScheme.primary
            )
            Spacer(modifier = Modifier.height(16.dp))
            
...
